# warden

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  code-standards.md  deny.toml  docs  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/warden/: Cargo.toml
crates/warden-core/: Cargo.toml
crates/warden-core/src/: agent_def.rs  agent_wire.rs  ci_channel.rs  convergence.rs  error.rs  event.rs  evidence.rs  evidence_wire.rs  hook.rs  lib.rs  pr_body.rs  socket.rs  state.rs  token_usage.rs  workflow.rs
crates/warden-gated/: Cargo.toml
crates/warden-gated/.sqlx/: query-66e448d3d5af6b9cf4579fc172f535c6edde9b3d45b114c3859e3c59a98a60e3.json  query-787c28f68b7a1394b457437c859bd9fcf2db116cefe4c4224eb7fcbd4f2b1fe0.json
crates/warden-gated/contrib/launchd/: com.warden.gated.plist
crates/warden-gated/contrib/systemd/: warden-gated.service
crates/warden-gated/src/: bare_repo.rs  ci_report.rs  ci_watcher.rs  db.rs  error.rs  gate.rs  gh_provider.rs  hook.rs  lib.rs  main.rs  notification.rs  pr_manager.rs  push.rs  relay.rs  run_tail.rs  serve.rs  verify.rs
crates/warden-gated/tests/: cli.rs
crates/warden-sandbox/: Cargo.toml
crates/warden-sandbox/docker/: Dockerfile  README.md
crates/warden-sandbox/src/: docker.rs  drain.rs  error.rs  lib.rs  local.rs
crates/warden-tui/: Cargo.toml
crates/warden-tui/.sqlx/: query-4d53230a110d56aece07c9cc9945b9462cc7447dc720266c1a83095c486887aa.json  query-55e5b943890cac04a75e2d4e5b9dd1eb3171bf193b92f3c8f24d5a35f1d2de4f.json  query-933c312cef4734e26eef82002d255b85f553d0cf2ec6219724d7a5260733230f.json
crates/warden-tui/src/: attach.rs  capabilities.rs  db.rs  error.rs  evidence.rs  lib.rs  main.rs  model.rs  subscriber.rs  ui.rs
crates/warden-tui/tests/: attach_cli.rs
crates/warden/.sqlx/: query-0303d5a96387a5be618535f2fe6bc73dfae2f2ec02e4fedc0e937ff229742a18.json  query-086b2172e0beef802ae1a047b1a422beee03b378c14f448483731d7a8b94a8eb.json  query-098292b6a09965f913084e308ee74536734ed74d1e77629d900ee1e5ace7b541.json  query-0d4a391363c7d7b8b7cce1ca78b5acd120be4e6024cbec0d7a0fe9efbc65390b.json  query-13a1fec6ff71aa8396d08c7b5734ca966e99c1df0432c1a6f5ac7f4b62aafb06.json  query-17a8fb27266d4a20bf97c34dab1ec188d0213c94426f948d41da40331a7de6ff.json  query-1be7b025a7fa89c59b95cb6a75e324462b2faa0c1ea63007316c7d2d432fe913.json  query-1cbbbebbf66d008aa84a0f93c0700cec28a0e342d632480579f15d1bbdb7c0ed.json  query-1ebc7768aa1e315072f10bb7d08517ea26ff7da0f9eaa9615d528ca75f151ae4.json  query-210282bf28b393cbeef1309526bc41e03e67a405f85a692986ddcad2b79ed027.json  query-29b71b55f8b7845c6a62a610da2f908deca4dc9f26f42e0f98074ebd09ebf25a.json  query-2bf7d9da476d9aa09dc5ebfc4cb87062fc8b058f3815ce051ea9391ee953cb26.json  query-2dc148acfcc6ea09609150968498c6bf59b058ed3a484e5d4bc7ebba4a4bbdaa.json  query-31e3675f9a61a6108dfadfa6eca6ba8d43fc92bfdfd57928d7b4a25533da231b.json  query-38ecc70cc6aee38afdcf2d17698c0d8dd50af0446c1b3563844cd2adc094bb36.json  query-39cb3428b28afb03b10f54d480113615546de9dc4e2a7fd9caa68bf8bb559fa4.json  query-39ff8c71faad3c0247c4d274e582f27ed7bedcb650c1b04603c8a7dbb4aafa08.json  query-3be40eb0f95ca09bb30b027ea668e677d0c98b737aaa40e4073cbdd0316cbefc.json  query-411ee62b99cd218ede992ae68c14c781ece03df615206447383993d898d74317.json  query-442e231326827047ec6c7f3dca305ed0f9c4dff5429aa47fc7a3099c34230a3f.json  query-57a256532b4ddbc3556e44da3f426efde888da6cec394a4064a91dce0fba275a.json  query-66400552a7cf800914d97e29aef82a0694a6bd4ae986e9204f16982bc666c5b9.json  query-6b9c34879f75ce8483634eaf77064ea5ffbe903aa65897b88220b4fd8e725c69.json  query-76ee4b9b4b620637415e5827fa08e950e4a67bce85c0ff5cde15a5dd90591058.json  query-7b3bfc5761c743e14f31fbf05edb8b5f16a86f5da7071cc9d8d53ce171285cad.json  query-7ea1f2d45659f1b236e5eed4ae6f59211720f0f401a14dc09026dc4f1abf2dae.json  query-85bd27c6999d33ef1b87bac7bc53157189f8253656a2396a8fa6f034babfc32e.json  query-86e15a378f3a07126cf9fc718207e5cace51166070ce7438def70334a1277159.json  query-899b49bacb5d3678905b8daec53aa544b8cae1f2523d25bac5da75608a4cfb7f.json  query-8d00eaaf8fe8f433bd96f6c018314c2df3c9346b6de28f644f5b65253988c8bc.json  query-8e6eae5ddf6da562ba36cf25a8e7b8a2da0aaa362c19edd71ae4f5dc254aadf9.json  query-914f856a6914aa5e5f0434f4130251a688da9ac45fde69b06fbe427b2c63ca4b.json  query-9869c0a0d5d9ed4ba0d7141e49ef3a818bd9da1e1bec92dc682efa99ff3a639f.json  query-9a1b32a4f6d6cbb7e541ab99963783d6b72c2e2eb680ebf3fb47ea09f3a934ec.json  query-9ac68ba9dfc8e5e0be0b5416200e5e42b30f604e3a8424ff3570cd523b30dabd.json  query-9e3ee493b4da30eaa287964a97f731a6ee584a100d3585b08e112e5b66b1bec7.json  query-9f696dd2d077abc1a208ca9b087d17e75ff9bd58b3b5f95ff962a3edf2d1d41c.json  query-a3f971a638a562f8b761511f787600c5a39c0fa55c9ee6a2dcc6dd5b10af6ae3.json  query-a8788aed5ca7c2fda62e993fa7d0662cbecf30090487cee95d8aa198734eb635.json  query-a9469bfe47aaa6727efed9328b29bc05c9ce38a6d3dfe69c7843e5acb0ae2e6b.json  (+20 more)
crates/warden/migrations/: 0001_initial.sql  0002_agent_process_start_time.sql  0003_commit_sha_tracking.sql  0004_events.sql  0004_evidence.sql  0006_pr_number.sql  0007_phase_budgets.sql  0008_token_usage.sql  0009_generic_workflow_state.sql  0010_generic_step_bookkeeping.sql
crates/warden/src/: agent_def.rs  agent_runner.rs  batch.rs  ci_channel.rs  db.rs  error.rs  event_bus.rs  evidence.rs  gate_trigger.rs  git_util.rs  hook.rs  hook_config.rs  lib.rs  main.rs  orchestrator.rs  path_util.rs  pr_summary.rs  process.rs  tool_adapter.rs  worktree.rs
crates/warden/src/orchestrator/: agent_run.rs  agents.rs  config.rs  convergence.rs  diff.rs  evidence_capture.rs  gate_tail.rs  mod.rs  recovery.rs  tampering.rs  test_support.rs
crates/warden/tests/: cli.rs
examples/workflows/with-techlead/: README.md  workflow.yaml
examples/workflows/with-techlead/.claude/agents/: techlead.md
