[workspace]
resolver = "2"
members = ["crates/warden-core", "crates/warden", "crates/warden-gated"]

[workspace.package]
edition = "2021"
license = "MIT"

# Phase 3 scope: `warden-gated` (the git gate daemon) has now joined the
# workspace alongside `warden-core` (pure logic) and `warden` (orchestrator
# binary) -- see ADR-0002/ADR-0006 and issue #3. `warden-tui` (Phase 8) will
# join as its own member when that phase starts -- no stub crate is added
# ahead of time.
