[package]
name = "warden-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pure orchestration logic for Warden: run state machine and convergence rules. No I/O."

[dependencies]
percent-encoding = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1", default-features = false, features = ["parse", "serde", "std"] }
