[package]
name = "warden-sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Execution-environment isolation seam: the Sandbox trait plus a LocalSandbox implementation (parity with warden's pre-existing subprocess isolation), ready for a DockerSandbox/FirecrackerSandbox to be layered in without re-touching call sites."

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
