[package]
name = "warden"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Warden orchestrator binary: worktree isolation, state persistence, convergence loop."

[[bin]]
name = "warden"
path = "src/main.rs"

[lib]
name = "warden"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.31", features = ["signal"] }
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
warden-core = { path = "../warden-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
